--- a/website/package.json
+++ b/website/package.json
@@ -10,7 +10,12 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "dotenv": "^16.0.2",
+    "ejs": "^3.1.8",
     "express": "^4.18.1",
+    "html": "^1.0.0",
+    "mongodb": "^4.10.0",
+    "mongoose": "^6.6.0",
     "nodemon": "^2.0.19",
     "path": "^0.12.7"
   }
